fix blog2 spacing

--- a/assets/index.css
+++ b/assets/index.css
@@ -409,7 +409,7 @@ hr {
 
 .images {
   width: inherit;
-  display: grid;
+  display: flex;
   justify-content: center;
 }
 
